styles/small.css
* {
	margin: 0;
	padding: 0;
}

:root {
    --Dark-Purple: rgb(23, 17, 35);
    --Russian-Violet: rgb(55, 34, 72);
    --Delft-Blue: rgb(65, 71, 112);
    --Powder-Blue: rgb(160, 185, 207);
    --Thistle: rgb(226, 207, 234);

}

header {
    background-color: var(--Russian-Violet);
    color: #eee;
    text-align: center;
    font-family: Shadows Into Light Two, Helvetica, sans-serif;
    font-weight: bolder;
    font-size: 88px;
}

.head-content {
    display: flex;
    justify-content: center;
    align-items: center;
}


#menu {
	display: block;
	font-size: 2rem;
	font-weight: 700;
	text-decoration: none;
	background-color: var(--Russian-Violet);
	color: #eee;
    font-family: Shadows Into Light Two, Helvetica, sans-serif;
    position: absolute;
    top: 1rem;
    right: 1rem;
}

#menu::before {
	content: "≡";
}

nav {
    background-color: var(--Russian-Violet);
    font-family: Shadows Into Light Two, Helvetica, sans-serif;
}

.navigation li {
	display: none;
}

.navigation a {
	display: block;
	padding: 0.75rem;
	text-align: left;
	text-decoration: none;
    text-align: center;
	color: #eee;
	font-weight: 600;
	transition: 0.5s;
	font-size: 24px;
}

.navigation a:hover,
.navigation a:active,
.course-nav a:hover,
.course-nav a:active {
	color: var(--Thistle);
	background-color: black;
}

.navigation a.active {
    background-color: var(--Delft-Blue); /* Highlight color */
    color: white;
    font-weight: bold;
    border-bottom: 3px solid var(--Thistle);
}

.show li {
	display: block;
}

#menu.show::before {
	content: "X";
}

h1 {
    font-family: Caveat, 'Arial Narrow', Arial, sans-serif;
    margin-block: 0.67em;
    font-size: 3em;
    padding-left: 1em;
}

h2 {
    font-family: Caveat, 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    font-size: xx-large;
    background-color: var(--Delft-Blue);
    color: #eee;
    padding-left: 8px;
}

header img {
    max-width: 150px;
    height: auto;
    padding: 20px;
}

.card {
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
}

.card img {
    max-width: 100%;
    height: auto;   
}

#idaho img {
    display: block;
    margin: 0 auto;
    padding-top: 20px;
}

main {
    padding: 10px;
    max-width: 100%;    
}

.card,
.course-nav a {
    border: 2px solid black;
    border-radius: 8px;
    font-size: 20px;
    margin: 10px;
}

.card p {
    font-family: Shadows Into Light Two, Helvetica, sans-serif;
    padding: 20px;
    text-align: center;
}

.card li {
    list-style-position: inside;
    font-family: Shadows Into Light Two, Times, serif;
    padding: 20px;
    font-weight: bolder;
}

.course-nav {
    background-color: unset;
    font-family: Shadows Into Light Two, 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: 20px;
}

.course-nav ul {
    display: flex;
    justify-content: center; 
    padding: 0;
}

.course-nav a {
    text-decoration: none;
    background-color: var(--Russian-Violet);
    color: #eee; 
    padding: 12px;
}
.course-nav li {
    list-style: none;
    display: inline-block;
    align-items: center;
    justify-content: space-between;
    margin-top: 10px;
}

.certs {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.course-button {
    border: 2px solid black;
    border-radius: 8px;
    text-align: center;
    padding: 5px;
    font-size: 20px;
    margin: 10px;
    background-color: var(--Powder-Blue);
    font-family: Shadows Into Light Two, Helvetica, sans-serif;
}

.complete {
    background-color: var(--Thistle);
}

.incomplete {
    background-color: var(--Powder-Blue);
}

footer {
    font-family: Shadows Into Light Two, Helvetica, sans-serif;
    background: var(--Russian-Violet);
    padding: 2rem;
    text-align: center;
    color: #fff;
    text-decoration: none;
}

@media (max-width: 600px) {
    .course-nav ul {
        flex-direction: column; /* Stacks buttons in smaller screens */
        align-items: center;
    }
}

